--- a/src/container/index.scss
+++ b/src/container/index.scss
@@ -20,3 +20,18 @@
 
     padding-left: 15px;
 }
+
+* {
+    font-family:
+        "Avenir Next",
+        Avenir,
+        Helvetica,
+        sans-serif,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        "Apple Color Emoji",
+        "Segoe UI Emoji",
+        "Segoe UI Symbol";
+}
